--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
 theme: jekyll-theme-slate
+<!DOCTYPE html>
+<html>
+<title>BlockChain</title>
+<body>
+  <h1> BlockChain. Everything Explained. </h1>
+  <p> Current applications of Blockchain. Click here to learn more.
+    <button1>Click me</button1>
+  Future applications of Blockchain. Click here to learn more.
+  <button2>Click me</button2>
+ </p>
+</body>
+</html>
